tests/int/check_command/snapshots/integration__int__check_command__init__init_freezes_existing_cycles.snap
---
source: tests/int/check_command/init.rs
info:
  program: crawk
  args:
    - "-p"
    - /tmp/.tmpwggBOj
    - check
    - "--init"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Scaffolded [ROOT]/crawk.toml.

  Reorder the modules: highest-level layer first, lowest last.
  A lower layer must never depend on a higher one.
  Froze 1 existing dependency loop as `allow-cycle`; untangle it and delete the entry.
  Then run `crawk check`.
